# ohsmathcc

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  deploy.sh  dev  dev-db.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  notes.md  prod.sh  pyproject.toml  shell.nix
accounts/: urls.py  views.py
accounts/templates/registration/: logged_out.html  login.html
announcements/: models.py  urls.py  views.py
announcements/migrations/: 0001_initial.py  0002_alter_announcement_options.py  0003_alter_announcement_options.py
announcements/static/announcements/: style.css
announcements/templates/announcements/: index.html  show.html
clubapp/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
home/: urls.py  views.py
home/templates/home/: apps.html  index.html
registrations/: admin.py  forms.py  models.py  urls.py  views.py
registrations/migrations/: 0001_initial.py  0002_alter_registration_options.py  0003_alter_registration_options.py  0004_alter_contest_options.py
registrations/static/registrations/: style.css
registrations/templates/registrations/: contests.html  myregistrations.html  registrations.html  registrations_for_contest.html  showcontest.html
static/: style.css
static/css/: listview.css  style.css
templates/: base.html
times/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
times/migrations/: 0001_initial.py  0002_alter_event_options.py  0003_alter_event_options.py
times/templates/times/: eventform.html  events.html  scheduleform.html  viewtimes.html
