[tool.poetry]
name = "ohsmathcc"
version = "0.1.0"
description = "Management Website for the OHS Math Competition Homeroom"
authors = ["Juni Kim <junikimm717@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
django-environ = "^0.8.1"
django-markdownify = "^0.9.1"
Markdown = "^3.3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.13.8"
ipython = "^8.3.0"
jedi = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
